# dotscripts

./: Cargo.toml  build_rust_utils.sh  change_default_sink.rs  change_default_source.rs  day_countdown.rs  lock-blur.sh  lock-screenshot.sh  lock-xkcd.sh  multi_monitor.rs  multi_monitor_detect.py  nixos_rebuild.rs  power_profiles.rs  poweroff.sh  regex_copier.rs  screenshot.sh  shell.nix  stop_backups.sh  update.sh  vpn.rs  xkcd.py
data/: flake.nix  shell.nix
helpers/: mod.rs
rust/change_default_sink/: Cargo.toml
rust/change_default_sink/src/: main.rs
rust/change_default_source/: Cargo.toml
rust/change_default_source/src/: main.rs
rust/day_countdown/: Cargo.toml
rust/day_countdown/src/: main.rs
rust/errors_with_context/: Cargo.toml
rust/errors_with_context/src/: boolean.rs  error_message.rs  lib.rs  tests.rs
rust/jetbrains_setup/: Cargo.toml
rust/jetbrains_setup/src/: main.rs
rust/multi_monitor/: Cargo.toml
rust/multi_monitor/src/: main.rs  output_filter.rs  outputs.rs  swaymsg.rs
rust/nixos_rebuild/: Cargo.toml
rust/nixos_rebuild/src/: main.rs
rust/power_profiles/: Cargo.toml
rust/power_profiles/src/: main.rs
rust/process_utils/: Cargo.toml
rust/process_utils/src/: lib.rs
rust/regex_copier/: Cargo.toml
rust/regex_copier/src/: main.rs
rust/releaser/: Cargo.toml
rust/releaser/src/: main.rs
rust/template/: Cargo.toml
rust/template/src/: main.rs
rust/vpn/: Cargo.toml
rust/vpn/src/: main.rs
shell/: brightness.sh  dmenu_brightness.sh  git-checker.sh  lock-blur.sh  lock-common.sh  lock-random.sh  lock-screenshot.sh  lock-xkcd.sh  poweroff.sh  update_flake.sh
