[workspace]
resolver = "3"
members = [
    "rust/process_utils",
    "rust/change_default_sink",
    "rust/change_default_source",
    "rust/day_countdown",
    "rust/power_profiles",
    "rust/vpn",
    "rust/nixos_rebuild",
    "rust/regex_copier",
    "rust/jetbrains_setup",
    "rust/multi_monitor",
    "rust/releaser",
]
