[workspace]
resolver = "3"
members = [
    "rust/change_default_sink",
    "rust/change_default_source",
    "rust/day_countdown",
    "rust/jetbrains_setup",
    "rust/multi_monitor",
    "rust/power_profiles",
    "rust/process_utils",
    "rust/regex_copier",
    "rust/releaser",
    "rust/template",
    "rust/vpn",
]
