[package]
name = "change_default_source"
version = "0.1.0"
edition = "2024"

[dependencies]
errors_with_context = "1.1.0"
process_utils = { path = "../process_utils"}
tokio = { version = "*", default-features = false, features = ["rt", "macros", "fs"] }
colored = { version = "3.0.0", default-features = false }
