[package]
name = "errors_with_context"
version = "1.0.0"
edition = "2024"

[features]
default = []
boolean = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies.serde]
version = "1.0.219"
optional = true
default-features = false
features = ["derive"]

[dependencies.serde_json]
version = "1.0.140"
optional = true
